# nft_minting_task

./: LICENSE  README.md
contracts/meta_tx_contract/: Cargo.toml  lib.rs
contracts/meta_tx_contract/src/: lib.rs
contracts/nft_contract/: Cargo.toml  lib.rs
contracts/nft_contract/src/: lib.rs
relayer_server/: .env  package.json  server.js
web_app/: .env  package-lock.json
web_app/src/: App.css  App.js
