[package]
name = "meta_tx_contract"
version = "0.1.0"
edition = "2018"

[dependencies]
ink_lang = { version = "3.4.0", features = ["nightly", "derive"] }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", features = ["nightly"] }
scale = { version = "1.4.0", features = ["std", "derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink_lang/std",
    "ink_storage/std",
]
